Updating nuget package for run-sequence of gulp events. as Gulp.run was deprecated and the old package used that. Fixed user menu z index so its not clipping through chat. Added filterable input in real time for navigation page. Lots of work to come.

--- a/Echelon/Content/Sass/Modules/side-menu.scss
+++ b/Echelon/Content/Sass/Modules/side-menu.scss
@@ -122,6 +122,7 @@
     @extend .font-weight-bold;
     @extend .overflow-auto;
     color: $color-shadow-dark;
+    z-index: 3;
     padding-bottom: 10%;
     position: absolute;
     right: 1px;
